[package]
name = "waw"
version = "0.0.0"
authors = []
edition = "2018"

[[bin]]
name = "waw"
path = "src/main.rs"

[dependencies]
derive_more = "0.15.0"
exit-future = "0.1.4"
futures = { version = "0.3.1", features = ["compat"] }
log = "0.4.8"
parking_lot = "0.9.0"
trie-root = "0.15.2"
codec = { package = "parity-scale-codec", version = "1.0.0" }
structopt = "0.3.3"
ansi_term = "0.12.1"
serde = { version = "1.0.101", features = ["derive"] }

waw-runtime = { path = "../runtime", version = "0.0.0" }

# Substrate dependencies
sc-consensus = "0.8.0"
sc-cli = { features = ["wasmtime"], version = "0.8.0" }
sc-executor = { features = ["wasmtime"], version = "0.8.0" }
sc-service = { features = ["wasmtime"], version = "0.8.0" }
sc-client-api = "2.0.0"
sc-transaction-pool = "2.0.0"
sc-network = "0.8.0"
sc-basic-authorship = "0.8.0"
sc-finality-grandpa = "0.8.0"
sc-informant = "0.8.0"
sc-chain-spec = "2.0.0"
sp-runtime = { default-features = false, version = "2.0.0" }
sp-io = "2.0.0"
sp-api = "2.0.0"
sp-core = "2.0.0"
sp-inherents = "2.0.0"
sp-consensus = "0.8.0"
sp-session = "2.0.0"
sp-offchain = "2.0.0"
sp-block-builder = "2.0.0"
sp-blockchain = "2.0.0"
sp-timestamp = "2.0.0"
sp-trie = "2.0.0"
sp-transaction-pool = "2.0.0"
cumulus = { default-features = false, version = "0.0.6" }

# Polkadot dependencies
polkadot-primitives = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch" }
polkadot-collator = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch" }
polkadot-service = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch" }
polkadot-cli = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch" }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }

[dev-dependencies]
assert_cmd = "0.12"
nix = "0.17"
rand = "0.7.3"
tokio = { version = "0.2.13", features = ["macros"] }

# Polkadot dependencies
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch" }
polkadot-test-runtime = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch" }
polkadot-test-runtime-client = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch" }
polkadot-test-service = { git = "https://github.com/paritytech/polkadot", branch = "rococo-branch" }

# Substrate dependencies
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
substrate-test-client = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
substrate-test-runtime-client = { git = "https://github.com/paritytech/substrate", branch = "rococo-branch" }
