[package]
name = "waw-runtime"
version = "0.0.0"
authors = []
edition = "2018"

[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.3.4"

[dependencies]
serde = { version = "1.0.101", default-features = false, optional = true, features = ["derive"] }

pallet-parachain-info = { path = "../pallets/parachain-info", version = "0.0.0", default-features = false }
pallet-token-dealer = { path = "../pallets/token-dealer", version = "0.1.0", default-features = false }
pallet-waw-core = { path = "../pallets/waw-core", version = "0.0.0", default-features = false }

# Substrate dependencies
sp-std = { default-features = false, version = "2.0.0" }
sp-api = { default-features = false, version = "2.0.0" }
sp-io = { default-features = false, version = "2.0.0" }
sp-version = { default-features = false, version = "2.0.0" }
sp-runtime = { default-features = false, version = "2.0.0" }
sp-core = { default-features = false, version = "2.0.0" }
sp-session = { default-features = false, version = "2.0.0" }
sp-offchain = { default-features = false, version = "2.0.0" }
sp-block-builder = { default-features = false, version = "2.0.0" }
sp-transaction-pool = { default-features = false, version = "2.0.0" }
sp-inherents = { default-features = false, version = "2.0.0" }

frame-support = { default-features = false, version = "2.0.0" }
frame-executive = { default-features = false, version = "2.0.0" }
frame-system = { default-features = false, version = "2.0.0" }
pallet-balances = { default-features = false, version = "2.0.0" }
pallet-randomness-collective-flip = { default-features = false, version = "2.0.0" }
pallet-timestamp = { default-features = false, version = "2.0.0" }
pallet-sudo = { default-features = false, version = "2.0.0" }
pallet-transaction-payment = { default-features = false, version = "2.0.0" }
cumulus = { default-features = false, version = "0.0.6" }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", version = "1.0.6" }

[features]
default = [ "std" ]
std = [
	"codec/std",
	"serde",
	"sp-api/std",
	"sp-std/std",
	"sp-io/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-version/std",
	"sp-offchain/std",
	"sp-session/std",
	"sp-block-builder/std",
	"sp-transaction-pool/std",
	"sp-inherents/std",
	"frame-support/std",
	"frame-executive/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-timestamp/std",
	"pallet-sudo/std",
	"pallet-transaction-payment/std",
	"pallet-parachain-info/std",
	"pallet-waw-core/std",
    "pallet-token-dealer",
	"cumulus/std",
]
# Will be enabled by the `wasm-builder` when building the runtime for WASM.
runtime-wasm = [
	"cumulus-upward-message/runtime-wasm",
]
