[package]
name = "parachain-info"
version = "0.0.0"
authors = []
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ["derive"]
package = "parity-scale-codec"
version = "1.3.4"

[dependencies]
serde = { version = "1.0.101", optional = true, features = ["derive"] }

frame-support = { default-features = false, version = "2.0.0" }
frame-system = { default-features = false, version = "2.0.0" }

cumulus = { default-features = false, version = "0.0.6" }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "cumulus/std",
    "frame-support/std",
    "frame-system/std",
]
